# polynomials

./: .clang-format  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  vcpkg.json
cmake/: CompilerWarnings.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake
docs/: Makefile  conf.py  index.rst
src/polynomials/: __init__.py  hints.py  pce.py  polynomials.cpp  polynomials_cpp.cpp
src/polynomials/include/: bindings.hpp  boost_polynomials.hpp  config.hpp  polynomial.hpp  polynomials.hpp  product.hpp  product_set.hpp  quadrature.hpp  sequence.hpp  series.hpp  sobol.hpp  traits.hpp  utils.hpp
tests/: conftest.py  test_numbers.py  test_polynomials.py  utils.py
